--- a/src/common/footer/footerStyle.scss
+++ b/src/common/footer/footerStyle.scss
@@ -1,10 +1,10 @@
 .footer-section {
   background: #222222;
   padding: 12px;
-  position: relative;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  /*position: absolute;
+  bottom: 0;*/
+  /*height: 20px;*/
+  width: 100%;
   .copyright {
     color: #fff;
     margin-bottom: 0;
