--- a/src/index.scss
+++ b/src/index.scss
@@ -30,21 +30,54 @@ html {
 }
 
 body {
-  min-height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
-  flex: 1 0 auto;
   font-family: 'Lato-Regular', sans-serif;
   font-size: 13px;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;  /* Font smoothing tweaks for MacOSx in Gecko */
   -webkit-font-smoothing: antialiased;
   color: #444A59;
-  background-color: #f8f8f8;
+  /*background-color: #f8f8f8;*/
 }
 
 * {
   box-sizing: border-box;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 100px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+
+  background-image: linear-gradient(to bottom, #484848, #606060, #787878, #A0A0A0, #D0D0D0);
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-image: linear-gradient(to bottom, #484848, #606060, #787878, #A0A0A0, #D0D0D0);
+}
+.h-body {
+ /* height: max-content;
+  max-height: calc(100% - 100px);*/
+}
+.outline-none {
+  outline: none;
+}
+.loader {
+  color: #aa7ad0 !important;
 }
