- Fixed offset value not getting passed correctly. - Made header position fixed and set some footer styles. - Made some styles modifications.

--- a/src/common/footer/footerStyle.scss
+++ b/src/common/footer/footerStyle.scss
@@ -1,10 +1,8 @@
 .footer-section {
-  background: #222222;
-  padding: 12px;
-  /*position: absolute;
-  bottom: 0;*/
-  /*height: 20px;*/
+  background: #343a40;
+  padding: 22px;
   width: 100%;
+  z-index: 1040;
   .copyright {
     color: #fff;
     margin-bottom: 0;
