--- a/src/common/header/headerStyle.scss
+++ b/src/common/header/headerStyle.scss
@@ -1,6 +1,8 @@
 header {
   width: 100%;
   height: 60px;
+  position: fixed;
+  z-index: 999;
   align-items: center;
   text-transform: uppercase;
   background: linear-gradient(to right, #f0f9ff 0%, #aa7ad0 0%, #d07acd 100%);
