- Added table body code from cart/wishlist component to resuable Table component and passed necessary props. - Added a new resuable component for calculating total price for cart/wishlist products. - Added styles to fix responsive issues in cart and wishlist components.

--- a/src/common/table/tableStyle.scss
+++ b/src/common/table/tableStyle.scss
@@ -7,10 +7,10 @@
         border-bottom: 1px solid #f2f2f2;
         th {
             font-size: 18px;
-            color: #111;
+            color: #fff;
             font-weight: 600;
             text-transform: uppercase;
-            background-color: #f5f5f5;
+            background-color: #aa7ad0 ;
         }
     }
     tbody {
@@ -71,7 +71,7 @@
                 font-size: 18px;
                 color: #aa7ad0;
                 font-weight: 700;
-                width: 150px;
+                width: 120px;
             }
             .cart__close {
                 text-align: right;
