--- a/src/components/products/index.scss
+++ b/src/components/products/index.scss
@@ -14,6 +14,7 @@
   height: 100%;
   background-color: #ffffff;
   border-radius: 8px;
+  border: 1px solid #eee;
 }
 .product__image-wrapper {
   padding: 20px;
@@ -84,7 +85,16 @@
   border-radius: 100px;
   background-color: #ffffff;
   cursor: pointer;
-  transition: .3s border, .3s color, .3s background-color;
+  //transition: .3s border, .3s color, .3s background-color;
+}
+.delete--btn {
+  padding: 13px;
+  font-family: 'Lato-Bold', sans-serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 1.39px;
+  border: 1px solid #e1505d!important;
+  color: #e1505d !important;
 }
 .button--round {
   display: block;
@@ -127,7 +137,7 @@
   background-color: #d9d9d9;
 }
 .pagination {
-  margin-bottom: 0;
+  margin: 0 10px;
 }
 .page-link {
   font-weight: 600;
